style.css
html, body {
  height: 100%;
  padding: 0;
  margin: 0;
  overflow: hidden;
}

pre {
  display: block;
  padding: 0;
  margin: 0;
  font-family: Consolas, monospace;
}

#main_logo, #lang_logo {
  position: absolute;
  top: 1em;
}

#main_logo {
  left: 15px;
}

#lang_logo {
  right: 15px;
}

#content {
  width: 60%;
  height: 90%;
  margin: 0 auto;
  position: relative;
  background: #ffccaa; /* DEBUG */
  padding: 0;
  padding-top: 1.5em;
  overflow-x: hidden;
}

#languages, #examples {
  float: left;
}

#new {
  float: right;
}

#toolbar {
  background: #ffaaff; /* DEBUG */
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
}

#history {
  padding: 0;
  clear: both;
  background: #aaffaa; /* DEBUG */
  position: absolute;
  max-height: 93%;
  bottom: 1em;
  width: 100%;
  font-family: Consolas, monospace;
  overflow: auto;
}

#prompt {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  background: #aaaaff; /* DEBUG */
  overflow: auto;
}

#prompt:before {
  content: ">>> ";
}

#expand {
  background: #ffaaff; /* DEBUG */
  position: absolute;
  bottom: 0;
  left: 99%;
  cursor: pointer;
}

.command {
  font-weight: bold;
}

.command:before {
  content: ">>> ";
}

.result:before {
  content: "==> ";
}

.error {
  color: red;
  font-weight: bold;
}

#evaluate {
  position: absolute;
  display: none;
  bottom: 0;
  right: 0;
}

